--- a/index1.html
+++ b/index1.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <h1>Platzi Movies</h1>
+
+    <script src="./src/API.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
