--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
             
             <form id="searchForm" class="header-searchForm">
                 <input type="text" placeholder="Vengadores" />
-                <button>🔍</button>
+                <button id="searchBtn">🔍</button>
             </form>
             </header>
 
@@ -118,8 +118,10 @@
             
     <footer>@njcr</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/API.js"></script>
+    <script src="./src/nodes.js"></script>
     <script src="./src/main.js"></script>
+    <script src="./src/navigation.js"></script>
 </body>
 </html>
