--- a/index1.html
+++ b/index1.html
@@ -119,6 +119,7 @@
     <footer>@njcr</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./src/axios.js"></script>
     <script src="./src/API.js"></script>
     <script src="./src/nodes.js"></script>
     <script src="./src/main.js"></script>
